fixed spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -59,6 +59,7 @@ section p {
   max-width: 45em;
   width: 40%;
   margin-left: 1.7em;
+  float: left;
 }
 
 .section-body {
@@ -85,6 +86,17 @@ section p {
   .section-icon {
     width: 15%;
   }
+
+  .section-body {
+    min-width: 50%;
+    max-width: 50%;
+    margin: 0 auto;
+  }
+
+  .wrapper {
+    margin-bottom: -5em;
+  }
+
 
 
 }
